syntax = "proto3";

package compose;

import "services/post/proto/post.proto";

option go_package = "./services/compose/proto";

service Compose {
	rpc ComposePost(ComposePostRequest) returns (ComposePostResponse);
}

message ComposePostRequest {
	int64          userid = 1;
	string         username = 2;
	string         text = 3;
	post.POST_TYPE posttype = 4;
    repeated int64 mediaids = 5;
}

message ComposePostResponse {
	string ok = 1;
}

