syntax = "proto3";

package url;

option go_package = "./services/url/proto";

service Url {
	rpc ComposeUrls(ComposeUrlsRequest) returns (ComposeUrlsResponse);
	rpc GetUrls(GetUrlsRequest) returns (GetUrlsResponse);
}

message ComposeUrlsRequest {
	repeated string extendedurls = 1;
}

message ComposeUrlsResponse {
	string       ok = 1;
	repeated string shorturls = 2;
}

message GetUrlsRequest {
	repeated string shorturls = 1;
}

message GetUrlsResponse {
	string          ok = 1;
	repeated string extendedurls = 2;
}

